gcc/testsuite/rust/rustc/ui/methods/method-call-lifetime-args-unresolved.rs
fn main() {
    0.clone::<'a>(); // { dg-error ".E0261." "" { target *-*-* } }
}

